# De-Val

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  min_compute.yml  pyproject.toml
deval/: __init__.py  agent.py  compute_horde_client.py  compute_horde_settings.py  contest.py  dendrite.py  forward.py  mock.py  protocol.py  requests.py  responses.py  task_generator.py  task_registry.py  task_repository.py  validator.py
deval/api/: docker_client.py  docker_init.sh  dockerfile  miner_api.py  miner_docker_client.py  miner_docker_client_old.py  models.py  pipeline.py  prompts.py  pyproject.toml
deval/base/: eval_miner.py  miner.py  neuron.py  validator.py
deval/llms/: __init__.py  base_llm.py  bedrock_llm.py  config.py  openai_llm.py
deval/model/: base_model.py  chain_metadata.py  huggingface_model.py  model_state.py  obfuscate.py  utils.py
deval/rewards/: __init__.py  dist_penalty.py  exact_match.py  float_diff.py  models.py  ordinal.py  pipeline.py  relevance.py  reward.py  rouge.py  rouge_reward.py
deval/shared/: context.py
deval/tasks/: __init__.py  attribution.py  context.py  hallucination.py  relevancy.py  summary_completeness.py  task.py  tool_schema.py
deval/tasks/attribution/: __init__.py  attribution_base.py  attribution_generation.py
deval/tasks/challenge_templates/: __init__.py
deval/tasks/hallucination/: __init__.py  hallucination_base.py  hallucination_generation.py  hallucination_wikipedia.py  hallucination_wikipedia_gen.py  hallucination_wikipedia_topics.py
deval/tasks/relevancy/: __init__.py  relevancy_base.py  relevancy_wikipedia.py
deval/tasks/summary_completeness/: __init__.py  summary_base.py  summary_generation.py  summary_wikipedia.py
deval/tools/: __init__.py  selector.py
deval/tools/datasets/: __init__.py  attribution.py  base.py  generic.py  wiki.py
deval/utils/: auto_updater.py  config.py  constants.py  logging.py  misc.py  uids.py
docs/: README_miners.md  README_validator.md  Validator_AWS_README.md
miners/: fake_miner.py  openai_miner.py
neurons/: compute_horde_entrypoint.py  validator.py
neurons/miners/: contest_miner.py  fake_miner.py  openai_miner.py  prompts.py
neurons/miners/huggingface/: obfuscate.py  pipeline.py  prompts.py
neurons/miners/model/: pipeline.py
neurons/miners/model/obfuscated/: pipeline.py  prompts.py
neurons/miners/obfuscated/huggingface/: pipeline.py  prompts.py
neurons/miners/obfuscated/pyarmor_runtime_000000/: __init__.py
neurons/miners/obfuscated_pipeline/model/: pipeline.py  prompts.py
scripts/: compute_horde_e2e_test.py  docker-compose.override.yml  docker_e2e_test.py  dockerfile  download_angle_model.py  e2e_test.py  generate_task_examples.py  submit.py  tier_test.py
tests/: test_agent.py  test_cleaner_pipeline.py  test_dataset.py  test_dataset_task_integration.py  test_forward.py  test_llm.py  test_mock.py  test_registry.py  test_scoring.py  test_tasks.py  test_uids.py
tests/fixtures/: cleaner.py  dataset.py  llm.py  task.py
vali_aws_process/: Validator_AWS_README.md
(+5 files in other folders)
