[tool.poetry]
name = "deval"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
langchain = "0.2.6"
langchain-core = "0.2.10"
numpy = "1.26.4"
python-dotenv = "1.0.1"
setuptools = "68.2.2"
sympy = "1.12"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
wandb = "0.17.3"
wikipedia = "1.4.0"
wikipedia-sections = "2.0.0"
bittensor = "7.3.1"
openai = "^1.35.7"
pandas = "^2.2.2"
boto3 = "^1.35.14"
transformers = "^4.44.2"
pyarmor = "^8.5.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
